@@ -2,6 +2,7 @@ version 6.1
 date: dd/mm/yyy
   * New EDOAL model type
   * when adding a topConcept, that concept is add to that scheme as well with skos:inScheme
+  * add the possibility to delete a task in a connected matching system (e.g. GENOMA)
   * fix NullPointerException in OntologyManager triggered by an attempt to fetch RDF data from an URL that does
     not return a Content-Type
   * fixed several bugs in the search regarding the use of special characters
